Fix footer text spacing

--- a/app/assets/stylesheets/partials/_layout-models.scss
+++ b/app/assets/stylesheets/partials/_layout-models.scss
@@ -2035,8 +2035,8 @@ Footer
 
 		.icon {
 			display: block;
-			font-size: 37px;
-			margin-bottom: 5px;
+			font-size: 42px;
+			margin-bottom: 7px;
 		}
 	}
 	.footer_right {
